--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                         </ul>
                     </nav>
                     <div class="main-div d-none">
-                        <section class="container-fluid  section__height main-card" style="background-image: url('img/Adib-Ezzati-bg.png')">
+                        <section class="container-fluid  section__height main-card" style="background-image: url('img/Adib-Ezzati.png')">
                             <div class="wrapper pb-16">
                                 <div class="align-items-center animated fadeInDow">
                                     <div class="container d-flex flex-column aligns-items-center justify-content-center">
-                                        <div class="row"> 
+                                        <!-- <div class="row"> 
                                             <div class="col">
                                                 <div class="rouge-script-font main_text  text-center" style="font-size:2.5em; color:#8F712F">
                                                     Raikan Cinta
@@ -170,7 +170,7 @@
                                         <div class="row"> 
                                             <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#ce7e00">
                                                 Taman Danau Kota
-                                        </div>    
+                                        </div> -->   
                                     </div>   
                                 </div>   
                             </div> 
